src/main/java/com/example/msamemberapi/application/error/api/ApiException.java
package com.example.msamemberapi.application.error.api;

import lombok.Getter;

@Getter
public class ApiException extends RuntimeException {

    private final int statusCode;

    public ApiException(int statusCode, String message) {
        super(message);
        this.statusCode = statusCode;
    }
}